--- a/Music Synthesizer/Music Synthesizer.vcxproj.filters
+++ b/Music Synthesizer/Music Synthesizer.vcxproj.filters
@@ -26,5 +26,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="notes.md" />
+    <None Include="..\windowsAPI_notes.md">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="windowsAPI_notes.md" />
   </ItemGroup>
 </Project>
